fix(Radio,Checkbox): use higher contrast color for faux input

--- a/src/Checkbox/index.scss
+++ b/src/Checkbox/index.scss
@@ -56,7 +56,7 @@
     background-color: white;
     font-weight: bold;
     border-radius: rem(3px);
-    border: 1px solid var(--color-lightGrey);
+    border: 1px solid var(--color-mediumGrey);
     color: white;
     text-align: center;
     box-sizing: content-box;
